<resources>
    <string name="app_name">LuxeVista Resort</string>
    <string name="welcome_message">Welcome to Luxury</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rooms">Rooms</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="attractions">Attractions</string>
    <string name="book_now">Book Now</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="ocean_view_suite">Ocean View Suite</string>
    <string name="deluxe_room">Deluxe Room</string>
    <string name="spa_treatment">Spa Treatment</string>
    <string name="fine_dining">Fine Dining</string>
    <string name="poolside_cabana">Poolside Cabana</string>
    <string name="beach_tour">Guided Beach Tour</string>
    <string name="logout">Logout</string>
    <string name="my_bookings">My Bookings</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="luxevista_logo">LuxeVista Logo</string>
    <string name="luxevista_resort">LuxeVista Resort</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="join_luxevista_resort_family">Join LuxeVista Resort family</string>
    <string name="valid_until_dec_31_2024">Valid until Dec 31, 2024</string>
    <string name="_20_off_spa_treatments_this_weekend">20% off spa treatments this weekend</string>
    <string name="spa_weekend_package">Spa Weekend Package</string>
    <string name="featured_offers">Featured Offers</string>
    <string name="todo">TODO</string>
    <string name="_350_night">$350/night</string>
    <string name="luxurious_suite_with_panoramic_ocean_views">Luxurious suite with panoramic ocean views</string>
    <string name="suite">Suite</string>
</resources>